Issue 5873: Base of the closure inspector

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -222,6 +222,9 @@ html.tip.Break_On_Element_Removal=Stop JavaScript execution when the element is 
 # or collapse it.
 html.label.Expand/Contract_All=Expand/Contract All
 html.tip.Expand/Contract_All=Expand/collapse all the children recursively
+# LOCALIZATION NOTE (firebug.reps.optimizedAway): Label shown to denote a closure variable that has
+# been optimized away.
+firebug.reps.optimizedAway=(optimized away)
 # LOCALIZATION NOTE (dom.label.breakOnPropertyChange, dom.tip.Break_On_Property_Change):
 # Used within the DOM panel to create a 'property breakpoint'. Right-click on an property of an object.
 # The label is also used for the 'Break On Property Change' button (available on the toolbar).
