Issue 5873: Closure inspector DOM panel integration

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -222,6 +222,17 @@ html.tip.Break_On_Element_Removal=Stop JavaScript execution when the element is 
 # or collapse it.
 html.label.Expand/Contract_All=Expand/Contract All
 html.tip.Expand/Contract_All=Expand/collapse all the children recursively
+# LOCALIZATION NOTE (dom.scopeName): Used within the DOM panel to name the fake property that
+# contains the innermost closure scope of a function.
+dom.scopeName=(closure)
+# LOCALIZATION NOTE (dom.scopeParentName): Used within the DOM panel to name the fake property
+# that contains the parent of a closure scope.
+dom.scopeParentName=(parent scope)
+# LOCALIZATION NOTE (firebug.reps.declarativeScope, firebug.reps.objectScope, firebug.reps.withScope):
+# Labels shown to describe different types of closure scopes.
+firebug.reps.declarativeScope=[declarative scope]
+firebug.reps.objectScope=[object scope]
+firebug.reps.withScope=[with scope]
 # LOCALIZATION NOTE (firebug.reps.optimizedAway): Label shown to denote a closure variable that has
 # been optimized away.
 firebug.reps.optimizedAway=(optimized away)
@@ -371,8 +382,10 @@ ShowDOMFuncs=Show DOM Functions
 dom.option.tip.Show_DOM_Funcs=Show functions specified inside the DOM
 ShowDOMConstants=Show DOM Constants
 dom.option.tip.Show_DOM_Constants=Show constants specified inside the DOM
+ShowClosures=Show Closures
+dom.option.tip.Show_Closures=Show the closures associated with various functions (activates the debugger)
 ShowInlineEventHandlers=Show Inline Event Handlers
-ShowInlineEventHandlersTooltip=Show available inline event handlers, that are not associated with a function
+ShowInlineEventHandlersTooltip=Show available inline event handlers that are not associated with functions
 ShowOwnProperties=Show Own Properties Only
 ShowOwnPropertiesTooltip=Don't show prototype chain
 ShowEnumerableProperties=Show Enumerable Properties Only
