issue6140: detect when downloading an HTML file with include()

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -780,6 +780,11 @@ commandline.include.loadFail=The following script could not be loaded: %S
 # %S = the filename
 commandline.include.invalidRequestProtocol=Only HTTP/HTTPS protocols are supported.
 
+# LOCALIZATION NOTE (commandline.include.invalidSyntax): For the include() function. This message is displayed
+# in the Console panel when the user tries to execute a non-Javascript file 
+# or when the script contains syntax errors
+commandline.include.invalidSyntax=The inclusion failed due to syntax errors. Does the file really contain JavaScript?
+
 # LOCALIZATION NOTE (commandline.include.aliasCreated): For the include() function. This message is displayed
 # in the Console panel when a new alias is created successfully
 # %S = the alias name
