Add a tooltip to the "(closure)" text
It describes the use of ".%", for discoverability.

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -228,6 +228,9 @@ dom.scopeName=(closure)
 # LOCALIZATION NOTE (dom.scopeParentName): Used within the DOM panel to name the fake property
 # that contains the parent of a closure scope.
 dom.scopeParentName=(parent scope)
+# LOCALIZATION NOTE (dom.tip.scopeName): Used within the DOM panel as a tooltip when hovering
+# "(closure)".
+dom.tip.scopeName=Use <func>.%closureVariable to access in the Command Line
 # LOCALIZATION NOTE (firebug.reps.declarativeScope, firebug.reps.objectScope, firebug.reps.withScope):
 # Labels shown to describe different types of closure scopes.
 firebug.reps.declarativeScope=[declarative scope]
