Add tooltip for variables in closures in DOM panel + some reformatting

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -231,6 +231,10 @@ dom.scopeParentName=(parent scope)
 # LOCALIZATION NOTE (dom.tip.scopeName): Used within the DOM panel as a tooltip when hovering
 # "(closure)".
 dom.tip.scopeName=Use <func>.%closureVariable to access in the Command Line
+# LOCALIZATION NOTE (dom.tip.scopeMemberName): Used within the DOM panel as a tooltip when
+# hovering a variable in a closure.
+# %S: the variable name - starts with "%"
+dom.tip.scopeMemberName=Use <func>.%S to access in the Command Line
 # LOCALIZATION NOTE (firebug.reps.declarativeScope, firebug.reps.objectScope, firebug.reps.withScope):
 # Labels shown to describe different types of closure scopes.
 firebug.reps.declarativeScope=[declarative scope]
