Break on Exceptions (Script panel option menu)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1468,7 +1468,14 @@ firebug.EditCSSTooltip=Edit this stylesheet
 # Message displayed in the Console panel when the private browsing mode is on.
 # (in Firefox 4+ it's 'Start Private Browsing')
 firebug.activation.privateBrowsingMode=Sites are not remembered in Private Browsing Mode
-# LOCALIZATION NOTE (firebug.breakpoint.showBreakNotifications):
+
+# LOCALIZATION NOTE (firebug.debugger.breakOnExceptions, firebug.debugger.tip.breakOnExceptions):
+# Label used within Script panel's options menu. Represents an option, that can be used
+# to break on JS exceptions.
+firebug.debugger.breakOnExceptions=Break On Exceptions
+firebug.debugger.tip.breakOnExceptions=Halt JavaScript execution when an exception occurs
+
+# LOCALIZATION NOTE (firebug.breakpoint.showBreakNotifications, firebug.breakpoint.tip.Show_Break_Notifications):
 # Label used within Script panel's options menu. Represents an option, that can be used
 # to switch of the break notifications.
 firebug.breakpoint.showBreakNotifications=Show Break Notifications
