Issue 6220: Don't show trace* in the command line help

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -744,11 +744,17 @@ panel.tip.Enabled=Toggle the panel activation
 # Firebug toolbar. This button allows to open the Command Line within other panels
 # than the Console panel.
 panel.tooltip.Show_Command_Line_Popup=Show Command Line Popup
+
 # LOCALIZATION NOTE (console.MethodNotSupported): Message displayed in the Console panel,
 # if a specific method is not supported.
 # %S = Name of the unsupported method
 # example: Firebug console does not support 'bind'
 console.MethodNotSupported=Firebug console does not support '%S'
+
+# LOCALIZATION NOTE (commandline.MethodDisabled): Message displayed in the Console panel,
+# if a disabled method is entered via the Command Line.
+commandline.MethodDisabled=This command line method is temporarily disabled
+
 # LOCALIZATION NOTE (commandline.MethodNotSupported): Message displayed in the Console panel,
 # if an unsupported method is entered via the Command Line.
 # %S = Name of the unsupported method
