Add period to two localized console messages

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -755,12 +755,12 @@ console.MethodNotSupported=Firebug console does not support '%S'
 
 # LOCALIZATION NOTE (commandline.MethodDisabled): Message displayed in the Console panel,
 # if a disabled method is entered via the Command Line.
-commandline.MethodDisabled=This command line method is temporarily disabled
+commandline.MethodDisabled=This command line method is temporarily disabled.
 
 # LOCALIZATION NOTE (commandline.MethodNotSupported): Message displayed in the Console panel,
 # if an unsupported method is entered via the Command Line.
 # %S = Name of the unsupported method
-commandline.MethodNotSupported=Firebug Command Line does not support '%S'
+commandline.MethodNotSupported=Firebug Command Line does not support '%S'.
 # LOCALIZATION NOTE (commandline.CurrentWindow): Message displayed in the Console panel when
 # cd(someWindow) is run. A space and a representation of the window object is appended
 # internally by Firebug.
