Issue 5956 (Allow copying single CSS properties) http://code.google.com/p/fbug/issues/detail?id=5956

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -969,6 +969,18 @@ css.tip.Copy_Rule_Declaration=Copy the rule including all its properties to the 
 # Allows copying the current CSS rule's properties to the clipboard.
 Copy_Style_Declaration=Copy Style Declaration
 css.tip.Copy_Style_Declaration=Copy the rule's properties to the clipboard
+# LOCALIZATION NOTE (css.label.Copy_Property_Declaration, css.tip.Copy_Property_Declaration,
+# css.label.Copy_Property_Name, css.tip.Copy_Property_Name, css.label.Copy_Property_Value,
+# css.tip.Copy_Property_Value):
+# Menu item labels and tooltips used in CSS panel/Style side panel context menu.
+# Allow copying the current CSS property's declaration/name/value to the clipboard.
+css.label.Copy_Property_Declaration=Copy Property Declaration
+css.tip.Copy_Property_Declaration=Copy the property's declaration to the clipboard
+css.label.Copy_Property_Name=Copy Property Name
+css.tip.Copy_Property_Name=Copy the property's name to the clipboard
+css.label.Copy_Property_Value=Copy Property Value
+css.tip.Copy_Property_Value=Copy the property's value to the clipboard
+
 # LOCALIZATION NOTE (plural.Error_Count2): Semicolon list of plural forms.
 # A label used in for Firebug Start Button. Displays the number of JavaScript errors found by Firebug.
 # %1 = Number of errors
