Add link to more info (related to issue 6200)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1563,7 +1563,7 @@ console.cmd.tip_title_desc=Learn Command Line Tips & Tricks
 # Description for Command Line tips that is logged
 # in the the Console panel if the user types "help" into the command line.
 console.cmd.tip.javascript=Any valid JavaScript expression can be executed on the Command Line. Example:
-console.cmd.tip.closures=In order to access variables in closures use '.%' syntax. Example:
+console.cmd.tip.closures=In order to access variables in closures use '.%' syntax (see <a>more</a>). Example:
 
 # LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
 # in the the Console panel if the user types "help" into the command line.
