Issue 6025 (Flash in the Net panel should cover all browser plugins) http://code.google.com/p/fbug/issues/detail?id=6025

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1451,7 +1451,7 @@ firebug.ClearConsole=Clear Console
 firebug.ClearTooltip=Clear the console
 firebug.All=All
 firebug.Images=Images
-firebug.Flash=Flash
+net.filter.label.Plugins=Plugins
 # editors.dtd
 editors.Configured_Firebug_Editors=Configured Firebug Editors
 editors.Editor=Editor
