--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -559,8 +559,30 @@ net.tip.Break_On_XHR=Stop the JavaScript execution as soon as an XMLHttpRequest 
 # for a link, that switches the view between raw source code and formated header values.
 net.headers.view_source=view source
 net.headers.pretty_print=pretty print
-# LOCALIZATION NOTE (net.filter.Media): Label for Net panel filter (used on the Net panel toolbar)
-net.filter.Media=Media
+
+# LOCALIZATION NOTE (net.filter.label.All, net.filter.tooltip.All, net.filter.label.HTML,
+# net.filter.tooltip.HTML, net.filter.label.CSS, net.filter.tooltip.CSS, net.filter.label.JS,
+# net.filter.tooltip.JS, net.filter.label.XHR, net.filter.tooltip.XHR, net.filter.label.Images,
+# net.filter.tooltip.Images, net.filter.label.Plugins, net.filter.tooltip.Plugins,
+# net.filter.label.Media, net.filter.tooltip.Media):
+# Labels and tooltips for Net panel filter (used on the Net panel toolbar)
+net.filter.label.All=All
+net.filter.tooltip.All=Show all MIME types
+net.filter.label.HTML=HTML
+net.filter.tooltip.HTML=Filter by HTML files
+net.filter.label.CSS=CSS
+net.filter.tooltip.CSS=Filter by CSS files
+net.filter.label.JS=JavaScript
+net.filter.tooltip.JS=Filter by JavaScript files
+net.filter.label.XHR=XHR
+net.filter.tooltip.XHR=Filter by XMLHttpRequests
+net.filter.label.Images=Images
+net.filter.tooltip.Images=Filter by images like JPEG, PNG, GIF and BMP files
+net.filter.label.Plugins=Plugins
+net.filter.tooltip.Plugins=Filter by Flash and Silverlight files
+net.filter.label.Media=Media
+net.filter.tooltip.Media=Filter by audios and videos like MP3, OGG, WAV, MIDI, WEBM, MPEG and FLV files 
+
 # LOCALIZATION NOTE (Post, Put): Label (verb) used in the Net panel for detailed info about
 # a network request (displayed when a Net panel entry is expanded). The content of
 # this tab displays sent data (related to an HTTP send method).
@@ -1449,9 +1471,7 @@ firebug.Profile=Profile
 firebug.Clear=Clear
 firebug.ClearConsole=Clear Console
 firebug.ClearTooltip=Clear the console
-firebug.All=All
-firebug.Images=Images
-net.filter.label.Plugins=Plugins
+
 # editors.dtd
 editors.Configured_Firebug_Editors=Configured Firebug Editors
 editors.Editor=Editor
