Improved tooltip of 'HTML' filter

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -569,7 +569,7 @@ net.headers.pretty_print=pretty print
 net.filter.label.All=All
 net.filter.tooltip.All=Show all MIME types
 net.filter.label.HTML=HTML
-net.filter.tooltip.HTML=Filter by HTML files
+net.filter.tooltip.HTML=Filter by HTML, XML, RSS, MathML and RDF files
 net.filter.label.CSS=CSS
 net.filter.tooltip.CSS=Filter by CSS files
 net.filter.label.JS=JavaScript
