Issue 6273 (Filter for fonts in Net panel) http://code.google.com/p/fbug/issues/detail?id=6273

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -582,6 +582,8 @@ net.filter.label.Plugins=Plugins
 net.filter.tooltip.Plugins=Filter by Flash and Silverlight files
 net.filter.label.Media=Media
 net.filter.tooltip.Media=Filter by audios and videos like MP3, OGG, WAV, MIDI, WEBM, MPEG and FLV files 
+net.filter.label.Fonts=Fonts
+net.filter.tooltip.Fonts=Filter by fonts like WOFF, TTF and OTF files 
 
 # LOCALIZATION NOTE (Post, Put): Label (verb) used in the Net panel for detailed info about
 # a network request (displayed when a Net panel entry is expanded). The content of
