Removed file types from wording to avoid having to change them whenever new types are added

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -569,21 +569,21 @@ net.headers.pretty_print=pretty print
 net.filter.label.All=All
 net.filter.tooltip.All=Show all MIME types
 net.filter.label.HTML=HTML
-net.filter.tooltip.HTML=Filter by HTML, XML, RSS, MathML and RDF files
+net.filter.tooltip.HTML=Show only markup files
 net.filter.label.CSS=CSS
-net.filter.tooltip.CSS=Filter by CSS files
+net.filter.tooltip.CSS=Show only CSS files
 net.filter.label.JS=JavaScript
-net.filter.tooltip.JS=Filter by JavaScript files
+net.filter.tooltip.JS=Show only JavaScript files
 net.filter.label.XHR=XHR
-net.filter.tooltip.XHR=Filter by XMLHttpRequests
+net.filter.tooltip.XHR=Show only XMLHttpRequests
 net.filter.label.Images=Images
-net.filter.tooltip.Images=Filter by images like JPEG, PNG, GIF and BMP files
+net.filter.tooltip.Images=Show only images
 net.filter.label.Plugins=Plugins
-net.filter.tooltip.Plugins=Filter by Flash and Silverlight files
+net.filter.tooltip.Plugins=Show only Flash and Silverlight files
 net.filter.label.Media=Media
-net.filter.tooltip.Media=Filter by audios and videos like MP3, OGG, WAV, MIDI, WEBM, MPEG and FLV files 
+net.filter.tooltip.Media=Show only audios and videos 
 net.filter.label.Fonts=Fonts
-net.filter.tooltip.Fonts=Filter by fonts like WOFF, TTF and OTF files 
+net.filter.tooltip.Fonts=Show only fonts 
 
 # LOCALIZATION NOTE (Post, Put): Label (verb) used in the Net panel for detailed info about
 # a network request (displayed when a Net panel entry is expanded). The content of
