Implementation of monitor/unmonitor command line APIs (only stack frames are missing)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1641,7 +1641,14 @@ console.cmd.help.$1=Represents the second last element selected via the Inspecto
 console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
 console.cmd.help.help=Displays help for all available commands.
 console.cmd.help.include=Includes a remote script.
-
+# LOCALIZATION NOTE (functionMonitor.Monitor_created, functionMonitor.Monitor_removed):
+# A message displayed to the user when monitor() or unmonitor() Command line APIs are used.
+functionMonitor.Monitor_created=Monitor created for %1$S
+functionMonitor.Monitor_removed=Monitor removed for %1$S
+# LOCALIZATION NOTE (functionMonitor.Breakponit_created, functionMonitor.Breakponit_removed):
+# A message displayed to the user when debug() or undebug() Command line APIs are used.
+functionMonitor.Breakponit_created=Breakpoint created in %1$S
+functionMonitor.Breakponit_removed=Breakpoint removed in %1$S
 # LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
 # if registered command doesn't have help URL associated and the user clicks on the command name.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
