--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1643,12 +1643,12 @@ console.cmd.help.help=Displays help for all available commands.
 console.cmd.help.include=Includes a remote script.
 # LOCALIZATION NOTE (functionMonitor.Monitor_created, functionMonitor.Monitor_removed):
 # A message displayed to the user when monitor() or unmonitor() Command line APIs are used.
-functionMonitor.Monitor_created=Monitor created for %1$S
-functionMonitor.Monitor_removed=Monitor removed for %1$S
-# LOCALIZATION NOTE (functionMonitor.Breakponit_created, functionMonitor.Breakponit_removed):
+functionMonitor.Monitor_created=Monitor created for %1$S.
+functionMonitor.Monitor_removed=Monitor removed for %1$S.
+# LOCALIZATION NOTE (functionMonitor.Breakpoint_created, functionMonitor.Breakpoint_removed):
 # A message displayed to the user when debug() or undebug() Command line APIs are used.
-functionMonitor.Breakponit_created=Breakpoint created in %1$S
-functionMonitor.Breakponit_removed=Breakpoint removed in %1$S
+functionMonitor.Breakpoint_created=Breakpoint created in %1$S.
+functionMonitor.Breakpoint_removed=Breakpoint removed in %1$S.
 # LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
 # if registered command doesn't have help URL associated and the user clicks on the command name.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
