Improve tooltip description

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -987,7 +987,7 @@ css.tip.Load_Original_Source=Discard the changes and load the original CSS
 # Stack side panel option (located in tab's option menu). If set to true,
 # function arguments are displayed
 callstack.option.Show_Arguments=Show Arguments
-callstack.option.tip.Show_Arguments=Display also function arguments
+callstack.option.tip.Show_Arguments=Display arguments passed to functions
 # LOCALIZATION NOTE (Copy_Rule_Declaration, css.tip.Copy_Rule_Declaration):
 # Menu item label and tooltip used in CSS panel/Style side panel context menu.
 # Allows copying the current CSS rule including all its properties to the clipboard.
