Fixed translation of "Global Events" tab in FBTrace

--- a/trace/FBTrace/chrome/locale/en-US/firebug-tracing.properties
+++ b/trace/FBTrace/chrome/locale/en-US/firebug-tracing.properties
@@ -11,7 +11,7 @@ tracing.Show_Time=Show Time
 
 tracing.tab.Logs=Logs
 tracing.tab.Options=Options
-tracing.tab.Global_Events=Global_Events
+tracing.tab.Global_Events=Global Events
 
 tracing.tab.Stack=Stack
 tracing.tab.Exception=Exception
