Added menu item tooltips

--- a/trace/FBTrace/chrome/locale/en-US/firebug-tracing.properties
+++ b/trace/FBTrace/chrome/locale/en-US/firebug-tracing.properties
@@ -34,9 +34,13 @@ tracing.cmd.tip.Restart=Restart Firefox
 tracing.cmd.Exit=Exit Firefox
 tracing.cmd.tip.Exit=Exit Firefox
 tracing.cmd.Copy_Stack=Copy Stack
+tracing.cmd.tip.Copy_Stack=Copy stack trace to clipboard
 tracing.cmd.Copy_Exception=Copy Exception
+tracing.cmd.tip.Copy_Exception=Copy exception to clipboard
 tracing.cmd.Expand_All=Expand All
+tracing.cmd.tip.Expand_All=Expand all log messages
 tracing.cmd.Collapse_All=Collapse All
+tracing.cmd.tip.Collapse_All=Collapse all log messages
 tracing.cmd.Tools=Tools
 tracing.cmd.tip.Tools=Advanced options
 tracing.cmd.Save=Save to File
