Changed file encoding to UTF-8 and added locale to manifest

--- a/trace/FBTrace/chrome/locale/de/firebug-tracing.properties
+++ b/trace/FBTrace/chrome/locale/de/firebug-tracing.properties
@@ -1,8 +1,8 @@
 # LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
 # Firebug tracing console menu items (located in Firebug's menu).
-Open_Firebug_Tracing=Firebug Tracing Öffnen
-Always_Open_Firebug_Tracing=Firebug Tracing immer öffnen
-Always_Open=Immer öffnen
+Open_Firebug_Tracing=Firebug Tracing Ã–ffnen
+Always_Open_Firebug_Tracing=Firebug Tracing immer Ã¶ffnen
+Always_Open=Immer Ã¶ffnen
 
 # LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
 title.Tracing=Tracing
@@ -28,7 +28,7 @@ tracing.cmd.tip.Clear=Alle Protokollnachrichten entfernen
 tracing.cmd.Find=Suchen
 tracing.cmd.tip.Find=Nach bestimmtem Text suchen
 tracing.cmd.Bookmark=Lesezeichen
-tracing.cmd.tip.Bookmark=Lesezeichen einfügen
+tracing.cmd.tip.Bookmark=Lesezeichen einfÃ¼gen
 tracing.cmd.Restart=Firefox neustarten
 tracing.cmd.tip.Restart=Firefox neustarten
 tracing.cmd.Exit=Firefox beenden
@@ -48,29 +48,29 @@ tracing.cmd.tip.Save=Protokollnachrichten in Datei speichern
 tracing.cmd.Load=Aus Datei laden
 tracing.cmd.tip.Load=Protokollnachrichten aus Datei laden
 tracing.cmd.Show_Command_Line=Kommandozeile anzeigen
-tracing.cmd.tip.Show_Command_Line=Kommandozeile benutzen, um Skripts innerhalb des Chrome Scopes des Browsers auszuführen
+tracing.cmd.tip.Show_Command_Line=Kommandozeile benutzen, um Skripts innerhalb des Chrome Scopes des Browsers auszufÃ¼hren
 tracing.cmd.Turn_Off_Firebug=Firebug ausschalten
 tracing.cmd.tip.Turn_Off_Firebug=Deaktiviert die Firebug Erweiterung
 tracing.cmd.Reload_Firebug=Firebug neuladen
-tracing.cmd.tip.Reload_Firebug=Lädt die Firebug Oberfläche neu
-tracing.cmd.Clear_Browser_Cache=Browser Cache löschen
-tracing.cmd.tip.Clear_Browser_Cache=Löscht den Browser Cache
+tracing.cmd.tip.Reload_Firebug=LÃ¤dt die Firebug OberflÃ¤che neu
+tracing.cmd.Clear_Browser_Cache=Browser Cache lÃ¶schen
+tracing.cmd.tip.Clear_Browser_Cache=LÃ¶scht den Browser Cache
 tracing.cmd.Force_Garbage_Collector=Garbage Collector forcieren
-tracing.cmd.tip.Force_Garbage_Collector=Führt den Garbage Collector aus
-tracing.cmd.Open_Profile_Directory=Profilordner öffnen
-tracing.cmd.tip.Open_Profile_Directory=Öffnet den Ordner des aktuellen Firefox Profils
-tracing.cmd.Open_Firefox=Neues Firefox Fenster öffnen
-tracing.cmd.tip.Open_Firefox=Öffnet ein neues Firefox Fenster
+tracing.cmd.tip.Force_Garbage_Collector=FÃ¼hrt den Garbage Collector aus
+tracing.cmd.Open_Profile_Directory=Profilordner Ã¶ffnen
+tracing.cmd.tip.Open_Profile_Directory=Ã–ffnet den Ordner des aktuellen Firefox Profils
+tracing.cmd.Open_Firefox=Neues Firefox Fenster Ã¶ffnen
+tracing.cmd.tip.Open_Firefox=Ã–ffnet ein neues Firefox Fenster
 
-tracing.cmd.Evaluate=Ausführen
-tracing.cmd.tip.Evaluate=Script in angegebenem Fenster ausführen (Strg+F5)
+tracing.cmd.Evaluate=AusfÃ¼hren
+tracing.cmd.tip.Evaluate=Script in angegebenem Fenster ausfÃ¼hren (Strg+F5)
 
 tracing.cmd.Inspector=Firebug Dateninspektor
 tracing.cmd.tip.Inspector=Erlaubt die Untersuchung der Firebug Datenstrukturen
 
-tracing.option.A11Y_Description=Zugänglichkeitsprobleme
+tracing.option.A11Y_Description=ZugÃ¤nglichkeitsprobleme
 tracing.option.ACTIVATION_Description=Firebug Aktivierung
-tracing.option.ACTIVITYOBSERVER_Description=Firebug Aktivitätsbeobachter
+tracing.option.ACTIVITYOBSERVER_Description=Firebug AktivitÃ¤tsbeobachter
 tracing.option.ANNOTATIONS_Description=Firebug Webseitenannotation
 tracing.option.BP_Description=Haltepunkte
 tracing.option.CACHE_Description=Quelltext Cache
@@ -82,10 +82,10 @@ tracing.option.CSS_Description=CSS Parsen
 tracing.option.DISPATCH_Description=Ereignisversand
 tracing.option.DOM_Description=DOM
 tracing.option.DOMPLATE_Description=Domplate Erstellung
-tracing.option.EDITOR_Description=Inline Editor & Autovervollständigung
+tracing.option.EDITOR_Description=Inline Editor & AutovervollstÃ¤ndigung
 tracing.option.ERRORLOG_Description=Fehlerprotokollierung von JS, CSS, XML etc.
 tracing.option.ERRORS_Description=Interne Firebug Fehler
-tracing.option.EVAL_Description=Skriptausführung
+tracing.option.EVAL_Description=SkriptausfÃ¼hrung
 tracing.option.FBS_BP_Description=Firebug Service Haltepunkte
 tracing.option.FBS_CREATION_Description=Firebug Service Skripterstellung
 tracing.option.FBS_ERRORS_Description=Firebug Service Fehler
@@ -100,7 +100,7 @@ tracing.option.FBS_TRACKFILES_Description=Firebug Service beobachtete Dateien
 tracing.option.FUNCTION_NAMES_Description=JavaScript Functionsnamen
 tracing.option.HISTORY_Description=Firebug Navigationshistorie
 tracing.option.HTML_Description=HTML
-tracing.option.HTTPOBSERVER_Description=HTTP Anfrageüberwachung
+tracing.option.HTTPOBSERVER_Description=HTTP AnfrageÃ¼berwachung
 tracing.option.INFOTIP_Description=Infotip
 tracing.option.INITIALIZE_Description=Firebug Initialisierung
 tracing.option.INSPECT_Description=Inspektor
@@ -113,7 +113,7 @@ tracing.option.NET_Description=Netzwerk Panel
 tracing.option.NET_EVENTS_Description=Netzwerkereignisse
 tracing.option.OPTIONS_Description=Firebug Einstellungen
 tracing.option.PANELS_Description=Panels
-tracing.option.SHORTCUTS_Description=Tastaturkürzel
+tracing.option.SHORTCUTS_Description=TastaturkÃ¼rzel
 tracing.option.SOURCEFILES_Description=JavaScript Quelltextdateien
 tracing.option.SPY_Description=XMLHttpRequests Beobachter
 tracing.option.STACK_Description=JavaScript Aufrufstack
@@ -122,5 +122,5 @@ tracing.option.SVGVIEWER_Description=SVG Betrachter
 tracing.option.TOOLTIP_Description=Start Button Tooltip
 tracing.option.TOPLEVEL_Description=Top Level JavaScript
 tracing.option.UI_LOOP_Description=JavaScript Debugging Benutzerschnittstelle
-tracing.option.WINDOWS_Description=Firebug Fenster- & Tabüberwachung
+tracing.option.WINDOWS_Description=Firebug Fenster- & TabÃ¼berwachung
 tracing.option.XMLVIEWER_Description=XML Betrachter
