issue6291: use evalInGlobalWithBindings() instead of eval()

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -785,6 +785,10 @@ panel.tooltip.Show_Command_Line_Popup=Show Command Line Popup
 # example: Firebug console does not support 'bind'
 console.MethodNotSupported=Firebug console does not support '%S'
 
+# LOCALIZATION NOTE (commandline.errorSourceHeader): Message displayed in the header of the
+# source code where an exception has occured.
+commandline.errorSourceHeader=EXPRESSION EVALUATED USING THE FIREBUG COMMAND LINE:
+
 # LOCALIZATION NOTE (commandline.MethodDisabled): Message displayed in the Console panel,
 # if a disabled method is entered via the Command Line.
 commandline.MethodDisabled=This command line method is temporarily disabled.
