--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -779,20 +779,14 @@ panel.tip.Enabled=Toggle the panel activation
 # than the Console panel.
 panel.tooltip.Show_Command_Line_Popup=Show Command Line Popup
 
-# LOCALIZATION NOTE (console.MethodNotSupported): Message displayed in the Console panel,
-# if a specific method is not supported.
-# %S = Name of the unsupported method
-# example: Firebug console does not support 'bind'
-console.MethodNotSupported=Firebug console does not support '%S'
+# LOCALIZATION NOTE (commandline.errorSourceHeader): Message displayed in the header of the
+# source code where an exception has occured.
+commandline.errorSourceHeader=EXPRESSION EVALUATED USING THE FIREBUG COMMAND LINE:
 
 # LOCALIZATION NOTE (commandline.MethodDisabled): Message displayed in the Console panel,
 # if a disabled method is entered via the Command Line.
 commandline.MethodDisabled=This command line method is temporarily disabled.
 
-# LOCALIZATION NOTE (commandline.MethodNotSupported): Message displayed in the Console panel,
-# if an unsupported method is entered via the Command Line.
-# %S = Name of the unsupported method
-commandline.MethodNotSupported=Firebug Command Line does not support '%S'.
 # LOCALIZATION NOTE (commandline.CurrentWindow): Message displayed in the Console panel when
 # cd(someWindow) is run. A space and a representation of the window object is appended
 # internally by Firebug.
