Issue 4814 ("Clear Activation List" needs confirmation) http://code.google.com/p/fbug/issues/detail?id=4814

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -82,6 +82,11 @@ firebug.menu.Right=Right
 firebug.menu.tip.Right=Align Firebug to the right of the user agent window
 firebug.uiLocation=Firebug UI Location
 firebug.menu.tip.UI_Location=Position of the Firebug user interface
+
+# LOCALIZATION NOTE (annotations.confirm.clear):
+# Used in a confirmation dialog when all Firebug annotations are going to be deleted
+annotations.confirm.clear=Do you want to clear the list of Firebug annotations for all websites?
+
 # LOCALIZATION NOTE (firebug_options): Tooltip text used for Firebug icon menu (them left
 # most button on Firebug main toolbar)
 firebug_options=Firebug Options
