Simplified Net panel summary layout and adjusted localization

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -976,7 +976,11 @@ ShowHttpHeaders=Show HTTP Headers
 # %1 = Number of requests
 # example: 21 requests
 plural.Request_Count2=%1$S request;%1$S requests
-FromCache=from cache
+
+# LOCALIZATION NOTE (net.summary.from_cache):
+# Label used in the Net panel's request summary. Displays the summarized response size coming from cache for all HTTP requests.
+net.summary.from_cache=%S from cache
+
 StopLoading=Stop Loading
 net.tip.Stop_Loading=Stop loading the request
 LargeData=(Very Large Data)
