--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -981,6 +981,14 @@ plural.Request_Count2=%1$S request;%1$S requests
 # Label used in the Net panel's request summary. Displays the summarized response size coming from cache for all HTTP requests.
 net.summary.from_cache=%S from cache
 
+# LOCALIZATION NOTE (net.summary.tip.request_count, net.summary.tip.total_size,
+# net.summary.tip.total_cached_size, net.summary.tip.total_request_time):
+# Labels used for the tooltips in the Net panel's request summary
+net.summary.tip.request_count=Number of requests
+net.summary.tip.total_size=Total size of all requests
+net.summary.tip.total_cached_size=Total cached size of all requests
+net.summary.tip.total_request_time=Total time needed to load all requests and time when the 'onload' event occurred
+
 StopLoading=Stop Loading
 net.tip.Stop_Loading=Stop loading the request
 LargeData=(Very Large Data)
