Allow to add invalid selectors

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1672,11 +1672,13 @@ console.cmd.help.include=Includes a remote script.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
 console.cmd.helpUrlNotAvailable=Help page for this command is not available.
 # LOCALIZATION NOTE (css.selector.noSelection): A help description used in empty
-# Selection side panel.
-css.selector.noSelection=Type custom selector or right click CSS rule and pick <b>Get Matching Elements</b>.
+# Selectors side panel.
+css.selector.noSelection=Type a custom selector or right click a CSS rule and pick <b>Get Matching Elements</b>.
+# LOCALIZATION NOTE (css.selector.noSelectionResults, css.selector.invalidSelector):
+# Info messages for selector trials in Selectors side panel
 css.selector.noSelectionResults=No matching elements
-css.selector.selectorError=Selection failed:
-# LOCALIZATION NOTE (css.selector.Selection): Title for Selector side panel displayed
+css.selector.invalidSelector=Invalid selector entered
+# LOCALIZATION NOTE (css.selector.Selection): Title for Selectors side panel displayed
 # in the CSS panel.
 css.selector.Selection=Elements
 # LOCALIZATION NOTE (panel.tip.selector): Tooltip text for the Selection side panel
