Added missing translations

--- a/extension/locale/en-US/selectors.properties
+++ b/extension/locale/en-US/selectors.properties
@@ -18,3 +18,5 @@ css.selector.TryASelector=Try a selector...
 # The menu-item is used in the CSS panel's context menu and allows to get matched elements
 # for the clicked rule selector. Elements are displayed in the side panel.
 css.selector.cmd.getMatchingElements=Get Matching Elements
+aria.labels.Selectors=Selectors side panel
+a11y.labels.press_enter_to_add_new_selector=Press Enter to add a new selector
