Tracking reflows in the Net panel, prototype

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -960,6 +960,13 @@ net.option.tip.Disable_Browser_Cache=Disable the browser's HTTP cache
 # See also: http://www.softwareishard.com/blog/firebug/watching-mozafterpaint-in-firebug/
 net.option.Show_Paint_Events=Show Paint Events
 net.option.tip.Show_Paint_Events=Show MozAfterPaint events as green lines inside the timeline
+
+# LOCALIZATION NOTE (net.option.Show_Reflow_Events, net.option.tip.Show_Reflow_Events):
+# Net panel option (located in tab's option menu). If set to true, the Net panel displays
+# reflow events (using nsIReflowObserver).
+net.option.Show_Reflow_Events=Show Reflow Events
+net.option.tip.Show_Reflow_Events=Show Reflow events as vertical lines inside the timeline
+
 # LOCALIZATION NOTE (net.option.Show_BFCache_Responses, net.option.tip.Show_BFCache_Responses):
 # Net panel option (located in tab's option menu). If set to true, the Net panel also displays responses coming from
 # BFCache (back-forward cache). See also: https://developer.mozilla.org/En/Working_with_BFCache
