Issue 6496: Profiler must be based on JSD2 (initial commit)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -685,7 +685,7 @@ AvgHeaderTooltip=Average time including function calls
 MinHeaderTooltip=Minimum time including function calls
 MaxHeaderTooltip=Maximum time including function calls
 ProfileButton.Enabled.Tooltip=Profile JavaScript execution time
-ProfileButton.Disabled.Tooltip=Profile JavaScript execution time (Script panel must be enabled)
+ProfileButton.Disabled.Tooltip2=Profile JavaScript execution time
 Function=Function
 Percent=Percent
 # LOCALIZATION NOTE (Calls, OwnTime, Time, Avg, Min, Max, File): Used in profiler report header
