Add basic cookie Max-Age display

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -148,7 +148,8 @@ cookies.edit.invalidhost=Cookie host is not valid.
 cookies.edit.invalidpath=Cookie path is not valid.
 # LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.rawValue,
 # cookies.header.domain, cookies.header.size, cookies.header.path, cookies.header.expires,
-# cookies.header.security, cookies.header.status, cookies.header.httponly):
+# cookies.header.security, cookies.header.status, cookies.header.httponly,
+# cookies.header.maxAge):
 # Column labels used in the cookie header.
 cookies.header.name=Name
 cookies.header.value=Value
@@ -160,10 +161,11 @@ cookies.header.path=Path
 cookies.header.expires=Expires
 cookies.header.security=Security
 cookies.header.httponly=HttpOnly
+cookies.header.maxAge=MaxAge
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
 # cookies.header.rawValue.tooltip, cookies.header.domain.tooltip, cookies.header.size.tooltip,
 # cookies.header.path.tooltip, cookies.header.expires.tooltip, cookies.header.security.tooltip,
-# cookies.header.httponly.tooltip):
+# cookies.header.httponly.tooltip, cookies.header.maxAge.tooltip):
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Name of the cookie
 cookies.header.value.tooltip=Value stored for the cookie
@@ -175,6 +177,7 @@ cookies.header.path.tooltip=Directory where the cookie is active
 cookies.header.expires.tooltip=Expiration date for the cookie
 cookies.header.security.tooltip=Shows whether it is a secure cookie or not
 cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
+cookies.header.maxAge.tooltip=Maximum time to store the cookie
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
 # request, there is an additional Cookies tab displayed when the user expands the request.
