--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1663,6 +1663,9 @@ console.cmd.help.profileEnd=Turns off the JavaScript profiler and prints its rep
 console.cmd.help.table=Allows to log provided data using tabular layout. The method takes one required parameter that represents table-like data (array of arrays or list of objects). The optional second parameter can be used to specify columns and/or properties to be logged.
 console.cmd.help.$0=Represents the last element selected via the Inspector.
 console.cmd.help.$1=Represents the second last element selected via the Inspector.
+console.cmd.help.$2=Represents the third last element selected via the Inspector.
+console.cmd.help.$3=Represents the fourth last element selected via the Inspector.
+console.cmd.help.$4=Represents the fifth last element selected via the Inspector.
 console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
 console.cmd.help.help=Displays help for all available commands.
 console.cmd.help.include=Includes a remote script.
