getEventListeners: basic command implementation (issue 6522)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1669,6 +1669,7 @@ console.cmd.help.$4=Represents the fifth last element selected via the Inspector
 console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
 console.cmd.help.help=Displays help for all available commands.
 console.cmd.help.include=Includes a remote script.
+console.cmd.help.getEventListeners=Returns the event listeners registered on the specified object.
 
 # LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
 # if registered command doesn't have help URL associated and the user clicks on the command name.
