Added hint to filter button tooltips about the shortcut for selecting multiple filters (related to issue 4621 and issue 4156)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -819,6 +819,12 @@ console.Use_Arrow_keys,_Tab_or_Enter=Use Arrow keys, Tab or Enter
 # LOCALIZATION NOTE (console.JSDisabledInFirefoxPrefs): Hint shown inside the Console panel in the case
 # JavaScript is not available
 console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you want to use the Console panel, then please enable this option via Tools > Options > Content > Enable JavaScript
+
+# LOCALIZATION NOTE (tooltip.multipleFiltersHint):
+# Hint used for Console and Net panel filter button tooltips describing the shortcut for selecting
+# multiple filters
+tooltip.multipleFiltersHint=Use Ctrl+Click to select multiple filters
+
 # LOCALIZATION NOTE (console.multiHighlightLimitExceeded):
 # Used by the Console panel for arrays. If the user moves the mouse over an array bracket,
 # all elements in the array are highlighted on the page. If there are too many elements
