--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1673,9 +1673,10 @@ console.cmd.help.$2=Represents the third last element selected via the Inspector
 console.cmd.help.$3=Represents the fourth last element selected via the Inspector.
 console.cmd.help.$4=Represents the fifth last element selected via the Inspector.
 console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
-console.cmd.help.lastCommandLineResult=Represents the result of the last evaluated expression in the Command Line. 
+console.cmd.help.lastCommandLineResult=Represents the result of the last evaluated expression in the Command Line.
 console.cmd.help.help=Displays help for all available commands.
 console.cmd.help.include=Includes a remote script.
+console.cmd.help.$p=After right-clicking a JavaScript object/value, and clicking "Use in Command Line", this command line variable is set to that value.
 
 # LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
 # if registered command doesn't have help URL associated and the user clicks on the command name.
