Issue 6522: Implement the getEventListeners command line API
http://code.google.com/p/fbug/issues/detail?id=6522

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1677,6 +1677,7 @@ console.cmd.help.$_=Represents the result of the last evaluated expression in th
 console.cmd.help.help=Displays help for all available commands.
 console.cmd.help.include=Includes a remote script.
 console.cmd.help.$p=After right-clicking a JavaScript object/value, and clicking "Use in Command Line", this command line variable is set to that value.
+console.cmd.help.getEventListeners=Returns an object with all event listeners registered directly on an element (or other event target).
 
 # LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
 # if registered command doesn't have help URL associated and the user clicks on the command name.
