Issue 6296: 	Cookie permissions doesn't work

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -137,9 +137,12 @@ cookies.default.thirdParty=Default (Accept cookies)
 cookies.default.allow=Default (Accept cookies)
 cookies.default.deny=Default (Deny cookies)
 cookies.default.warn=Default (Warn before accepting cookie)
-cookies.host.session=Accept session cookies from %S 
-cookies.host.accept=Accept cookies from %S 
+cookies.default.limitThirdParty= Default (Limit third party cookies)
+cookies.host.session=Accept session cookies from %S
+cookies.host.accept=Accept cookies from %S
 cookies.host.reject=Deny cookies from %S
+cookies.host.limitThirdParty=Limit third party cookies for %S
+
 # LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
 # cookies.edit.invalidpath): Various error messages used when a new cookie is created
 # using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
