Show a message about missing stack traces when the Script panel is disabled

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -105,7 +105,7 @@ console.option.tip.Show_CSS_Errors=Log CSS error messages into the console
 ShowXMLHTMLErrors=Show XML/HTML Errors
 console.option.tip.Show_XML_HTML_Errors=Log XML and HTML error messages into the console
 ShowStackTrace=Show Stack Trace With Errors
-console.option.tip.Show_Stack_Trace=Show stack trace information for error messages
+console.option.tip.Show_Stack_Trace2=Show stack trace information for error messages (Script panel must be enabled)
 ShowXMLHttpRequests=Show XMLHttpRequests
 console.option.tip.Show_XMLHttpRequests=Log XMLHttpRequests into the console
 ShowChromeErrors=Show Chrome Errors
@@ -819,6 +819,17 @@ console.Use_Arrow_keys,_Tab_or_Enter=Use Arrow keys, Tab or Enter
 # LOCALIZATION NOTE (console.JSDisabledInFirefoxPrefs): Hint shown inside the Console panel in the case
 # JavaScript is not available
 console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you want to use the Console panel, then please enable this option via Tools > Options > Content > Enable JavaScript
+# LOCALIZATION NOTE (console.tip.StackTraceWithoutDebugger): Tooltip shown inside the Console panel
+# when hovering an error thrown when the debugger was disabled, with missing stack trace etc.
+console.tip.ErrorWithoutDebugger=The Script panel must be enabled to get extended error information.
+# LOCALIZATION NOTE (console.tip.ScriptPanelMustBeEnabledForTraces): Message shown inside the Console
+# panel instead of a stack trace when it is missing because the script panel is disabled. The text
+# enclosed in <a></a> is a link which enables the Script panel.
+console.ScriptPanelMustBeEnabledForTraces=The Script panel must be enabled to get stack traces. <a>Enable Script panel.</a>
+# LOCALIZATION NOTE (console.tip.DebuggerWasDisabledForError): Message shown inside the Console
+# panel instead of a stack trace when the script panel was disabled when the error was thrown,
+# but is now enabled.
+console.DebuggerWasDisabledForError=The debugger was deactivated when this error was thrown.
 
 # LOCALIZATION NOTE (tooltip.multipleFiltersHint):
 # Hint used for Console and Net panel filter button tooltips describing the shortcut for selecting
