Fix localization typo with max age column header

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -161,7 +161,7 @@ cookies.header.path=Path
 cookies.header.expires=Expires
 cookies.header.security=Security
 cookies.header.httponly=HttpOnly
-cookies.header.maxAge=MaxAge
+cookies.header.maxAge=Max. Age
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
 # cookies.header.rawValue.tooltip, cookies.header.domain.tooltip, cookies.header.size.tooltip,
 # cookies.header.path.tooltip, cookies.header.expires.tooltip, cookies.header.security.tooltip,
